Refactoring message-ids. Add translation for many entries in messages_de.properties.

--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -94,7 +94,7 @@ folder.no.children=Dieser Ordner enthält keine Unterordner.
 folder.name=Name
 folder.info.title=Mehr Informationen über diesen Ordner anzeigen.
 folder.index=Repository ansehen
-folder.id=Id
+id=Id
 folder.do.filter=Versionen filtern
 folder.acl=ACL
 folder.close.view=Unterordner-Ansicht schließen
@@ -126,7 +126,6 @@ folderType.delete.fail=Der Ordner-Typ konnte nicht gelöscht werden. Ist wahrsch
 folderType.delete.success=Der Ordner-Typ ''{0}'' wurde erfolgreich gelöscht.
 folderType.description=Beschreibung
 folderType.edit.title=Ordner bearbeiten
-folderType.id=Id
 folderType.list.link=Liste der Ordner-Typen
 folderType.list.title=Liste der Ordner-Typen
 folderType.name=Name
@@ -138,7 +137,6 @@ format.description=Beschreibung
 format.edit.title=Format bearbeiten
 format.empty.name=Bitte wählen Sie einen Namen für das Format.
 format.extension=Erweiterung / Dateiendung
-format.id=Id
 format.list=Liste der Formate
 format.list.title=Liste der Formate
 format.name=Name
@@ -165,7 +163,6 @@ osd.delete.ok=\#{0} wurde erfolgreich gelöscht.
 osd.format=Format
 osd.getContent.link=Inhalt herunterladen
 osd.h=Objekt \#{0}\: "{1}"
-osd.id=Id
 osd.is.latestBranch=Dies ist die neueste Version in diesem Zweig.
 osd.is.latestHead=Dies ist die neueste Version im Stamm.
 osd.is.locked=Das Objekt {0} wurde gesperrt.
@@ -260,3 +257,312 @@ error.object.in.use=Dieses Objekt kann nicht gelöscht werden, weil es noch irge
 error.object.already.exits=Ein ähnliches Objekt existiert bereits.
 error.folder.has_content=Dieser Ordner enthält noch Objekte und kann nicht gelöscht werden.
 error.protected_relations=Das Objekt ist über geschützte Beziehungen mit anderen Objekten verbunden. 
+acl.aclEntries=ACL-Einträge<br>(Zuordnung ACL zu Gruppe)
+acl.add.group=Gruppe mit ACL verbinden
+acl.add_to_group=Zu Gruppe hinzufügen
+acl.create=Neue ACL
+acl.create.title=ACL anlegen
+acl.description=Beschreibung
+acl.edit.title=ACL bearbeiten
+acl.group.has_entry=Diese Gruppe ist schon mit der angegebenen ACL verknüpft.
+acl.groups=Gruppen
+acl.list=ACL-Liste
+acl.list.title=ACL Liste
+acl.manage.aclEntries=ACL-Einträge mit folgender Gruppe verwalten
+acl.name=Name
+acl.no.aclEntries=(Diese ACL hat keine Acl-Einträge)
+acl.no.free.groups=(Alle verfügbaren Gruppen wurden hinzugefügt)
+acl.remove.group=ACL-Eintrag entfernen
+acl.remove_from_group=Von Gruppe entfernen
+acl.show.title=ACLs anzeigen
+acl.showAclsByGroup.title=ACL-Liste
+acl.update.fail=Die ACL konnte nicht aktualisiert werden. Fehlermeldung\: ''{0}''
+acl.update.success=Die ACL wurde aktualisiert.
+acl.usersByGroup.list.label=ACL von Gruppe {0}
+acl.visit.aclEntry=zum ACL-Eintrag
+aclEntry.acl=ACL
+aclEntry.group=Gruppe
+aclEntry.link.show=ACl-Einträge anzeigen
+aclEntry.list=Liste der ACL-Einträge
+aclEntry.list.onlyAcl=ACL-Einträge von ACL ''{0}'' werden angezeigt
+aclEntry.list.onlyGroup=ACL-Einträge von Gruppe ''{0}'' werden angezeigt
+aclEntry.list.title=ACL-Einträge
+aclEntry.show.title=ACL-Eintrag
+aclEntry.toggleAll.allow=Alles erlauben
+aclEntry.toggleAll.deny=Alles verbieten
+admin.server.objects=Server-Objekte verwalten
+admin.title=Cinnamon Administration
+alt.exclamation=Ausrufezeichen als Icon für Fehlermeldungen
+alt.logo=Logo für dieses Repository
+cancel=abbrechen
+changeTrigger.action=Aktion
+changeTrigger.active=Aktiviert
+changeTrigger.command=Befehl
+changeTrigger.config=Konfigurationsparameter
+changeTrigger.confirm.delete=Wollen Sie diesen ChangeTrigger wirklich löschen?
+changeTrigger.controller=Controller
+changeTrigger.create=ChangeTrigger anlegen
+changeTrigger.delete=löschen
+changeTrigger.edit=bearbeiten
+changeTrigger.list.title=Liste der ChangeTrigger
+changeTrigger.none.defined=In diesem Repository gibt es noch keine ChangeTrigger.
+changeTrigger.options=Optionen
+changeTrigger.postTrigger=Post-trigger
+changeTrigger.preTrigger=Vor-trigger
+changeTrigger.ranking=Position
+changeTrigger.triggerType=Trigger-Typ
+changeTriggerType.confirm.delete=Wollen Sie diesen ChangeTrigger-Typ wirklich löschen?
+changeTriggerType.create=Neuen ChangeTrigger-Typ anlegen
+changeTriggerType.delete=löschen
+changeTriggerType.description=Beschreibung
+changeTriggerType.edit=bearbeiten
+changeTriggerType.list=Liste der ChangeTrigger-Typen
+changeTriggerType.list.title=ChangeTrigger-Typen
+changeTriggerType.name=Name
+changeTriggerType.none.defined=Dieses Repository enthält bisher keine ChangeTrigger-Typen.
+changeTriggerType.options=Optionen
+changeTriggerType.triggerClass=Trigger-Klasse
+cinnamon.cms=Cinnamon ECMS
+cinnamon.homepage=Cinnamon Homepage
+configEntry.config=Konfiguration
+configEntry.confirm.delete=Wollen Sie diesen Konfigurationseintrag wirklich löschen?
+configEntry.create=Neuen Konfigurationseintrag erstellen
+configEntry.delete=löschen
+configEntry.edit=bearbeiten
+configEntry.list.title=Liste der Konfigurations-Einträge
+configEntry.name=Name
+configEntry.none.defined=Bisher sind noch keine Konfigurationseinträge erstellt worden.
+create.folder=Ordner anlegen
+create.format=Dateiformat
+create.name=Name
+create.object=Objekt anlegen
+create.osd.head=Objekt anlegen in Ordner ''{0}''
+create.success=Das Objekt wurde erfolgreich angelegt.
+data.save=speichern
+default.link.skip.label=Zum Inhalt springen
+dummy.page=Ok, Sie haben die Test-Post-Loginseite erreicht. Ihr Login war also erfolgreich. Nun sollte jemand \
+ eine sinnvollere Seite erstellen und in der Config.groovy definieren: \
+ grails.plugins.springsecurity.successHandler.defaultTargetUrl='/login/dummyPage'
+error.acquire.lock=Konnte das Objekt nicht sperren.
+error.class.not.found=Die angegebene Klasse wurde nicht gefunden. Bitte prüfen Sie den Namen und/oder \
+ sprechen Sie mit ihrem Administrator (Hinweis\: es geht um ein classpath-Problem)
+error.content.not.found=Der angeforderte Inhalt wurde nicht gefunden. Mögliche Ursachen\:\
+ Cinnamon ist sucht vergeblich Inhalt eines anderswo gespeicherten Repostory auf \
+ diesem Server oder ist falsch konfiguriert.
+error.delete.denied=Dieses Objekt dürfen Sie nicht löschen.
+error.delete.folder=Dieser Ordner konnte nicht gelöscht werden. Ursache\: {0}
+error.delete.has_descendants=Von diesem Objekt existieren neuere Versionen, daher kann es nicht gelöscht werden.\
+ Bitte löschen Sie zuerst die neuen Versionen.
+error.duplicate.message.id=Es gibt schon eine message-id mit diesem Namen und der gewählten Sprache in der Datenbank.
+error.empty.field=Bitte füllen Sie alle obligatorischen Felder aus.
+error.file.not.found=Die angeforderte Datei wurde nicht gefunden.
+error.folder.exists=Es gibt bereits einen Ordner mit diesem Namen.
+error.folder.not.found=Der gesuchte Ordner konnte in der Datenbank leider nicht gefunden werden.
+error.permission.not_found=Die Berechtigung {0} wurde nicht gefunden.
+error.illegal.parameter=Fehler\: '{0}' ist als Feld-Name nicht erlaubt.
+error.image.not.found=Das angeforderte Bild wurde nicht gefunden.
+error.invalid.integer=Bitte verwenden Sie nur ganzezahlige Werte.
+error.invalid.object=Die angegebene Objekt-Id ist leider ungültig.
+error.loading.folders=Fehler\: ein oder mehr Ordner konnten nicht geladen werden. Bitte loggen Sie sich erneut ein.\
+ Die Originalfehlermeldung war\:<br>{0} 
+error.locked.already=Dieses Objekt ist schon von einem anderen Benutzer gesperrt.
+error.no.copy.into.self=Sie können einen Ordner nicht in einen seiner Unterordner kopieren.
+error.no.move.into.self=Sie können einen Ordner nicht in einen seiner Unterordner verschieben.
+error.not.iRelationResolver.class=Der gewünschte RelationResolver konnte nicht instantiiert werden. Bitte stellen Sie sicher, daß \
+ Sie eine Klasse gewählt haben, die das IRelationResolver-Interface korrekt implementiert.
+error.not.iTransformer.class=Die angegebene Klasse sieht nicht nach einem gültigen ITransformer aus.
+error.not.iTrigger.class=Bitte geben Sie den Namen einer Klasse aus dem Programmpfad (classpath) an,\
+ die das Interface cinnamon.trigger.ITrigger implementiert.
+error.not_logged_in=Bitte melden Sie sich ab - Ihre Sitzungs-Id schein ungültig zu sein. 
+error.object.not.found=Das gewünschte Objekt wurde leider nicht in der Datenbank gefunden.
+error.param.config=Der Konfigurations-Parameter ist ungültig.
+error.param.isoCode.length=Fehler\: Zu viele Zeichen - die maximale Länge für einen Sprachcode ist {0} Zeichen. 
+error.param.isoCode.null=Bitte tragen Sie einen Wert für den Sprachcode ein.
+error.param.metadata=Die Metadaten müssen zumindest wohlgeformtes XML sein.
+error.request.failed=Ihre Anfrage konnte aus irgendeinem Grund nicht erfolgreich bearbeitet werden.
+error.save.metadata=Beim Speichern der Metadaten ist ein Fehler aufgetreten\: {0}
+error.save.object=Das Objekt konnte nicht gespeichert werden. Fehler\: {0}
+error.set.aclId=Die ACL konnte nicht geändert werden.
+error.source.is.target=Fehler\: Quelle und Ziel sind identisch.
+folder.copy.fail=Kopieren des Ordners {0} ist leider fehlgeschlagen. Fehler\: {0}
+folder.copy.ok=Der Ordner {0} wurde angelegt.
+folder.move.fail=Der Ordner {0} konnte nicht verschoben werden. Fehlermeldung\: {1}
+folder.move.ok=Der Ordner {0} wurde verschoben.
+folder.move.unnecessary=Der Ordner war schon am richtigen Platz.
+group.add_to_user=Zu Benutzerkonto hinzufügen
+group.create=Neue Gruppe
+group.create.title=Gruppe anlegen
+group.delete.success=Die Gruppe {0} wurde gelöscht.
+group.description=Beschreibung
+group.edit.title=Gruppe bearbeiten
+group.is_user=Ist eine benutzer-spezifische Gruppe
+group.list=Gruppenliste
+group.list.title=Gruppenliste
+group.name=Name
+group.parent=Elterngruppe
+group.parent.none_selected=(keine)
+group.remove_from_user=Verknüpfung mit Benutzer entfernen 
+group.show.title=Gruppe anzeigen
+group.show_acls=ACLs anzeigen
+group.show_users=Benutzer anzeigen
+group.subgroup.list.title=Untergruppen von ''{0}''
+group.update.fail=Aktualisierung der Gruppe ist fehlgeschlagen.
+group.update.success=Die Gruppe wurde erfolgreich gespeichert.
+health.checkGroups.intro=Einige Benutzergruppen sind essentiell für den Betrieb von Cinnamon. \
+ Dies beinhaltet die Alias-Gruppen für Besitzer und die "_everyone" (Jedermann-) Gruppe.
+health.checkGroups.title=Standard-Gruppen überprüfen.
+health.checkTypes.intro=Objekttypen werden für die Zuordnung von Objekten zu Kategorien benötigt.\
+ Z.B. wenn ein Dokument keinem spezifischen Datei-Typ zugeordnet werden kann, hat es den Typ "Standard Objekt".\
+ Gleiches gilt für Ordner und andere "typisierte" Dinge. 
+health.checkTypes.title=Objekt-Typen prüfen
+health.everyone.missing=Die Alias-Gruppe "_everyone" (Jedermann-Gruppe) fehlt.
+health.everyoneAlias=Jedermann Alias Gruppe
+health.fixed.everyone=Die Gruppe "everyone" (Jedermann-Gruppe) wurde angelegt.
+health.fixed.folderType=Standard Ordner-Typ wurde angelegt.
+health.fixed.objectType=Standard-Objekttyp wurde angelegt.
+health.fixed.owner=Die Alias-Gruppe für "Objekt-Besitzer" wurde angelegt.
+health.folderType.missing=Der Standard-Ordnertyp fehlt.
+health.free.memory=Freier Speicher
+health.groups.everyone=Jedermann-Gruppe
+health.objectType.missing=Der Standard-Objekttyp fehlt.
+health.owner.missing=Die Alias-Gruppe "Objektbesitzer" fehlt.
+health.ownerAlias=Objektbesitzer-Aliasgruppe
+health.title=System-Status prüfen
+health.to.checkGroups=Standard-Gruppen prüfen
+health.to.checkTypes=Objekttypen prüfen
+health.to.checkUsers=Benutzerkonten prüfen
+health.to.fillUpUsersGroup=Benutzer zur "alle Benutzer"-Gruppe hinzufügen.
+health.to.fixEveryone=gruppe anlegen
+health.to.fixFolderTypes=Ordnertypen korrigieren
+health.to.fixObjectTypes=Objekttype korrigieren
+health.to.fixOwner=Objektbesitzer-Gruppe anlegen
+health.to.fixUserGroup=Benutzer-Gruppe anlegen
+health.to.fixUserGroups=Interne Benutzer-Gruppen anlegen
+health.to.index=Hauptseite des System-Checks
+health.total.memory=Gesamter sichtbarer Speicher
+health.types.folderType=Standard Ordnertyp
+health.types.objectType=Standard-Objekttyp
+health.userGroup.missing=Interne Gruppenobjekte fehlen.
+health.userGroup.status=Status der Benutzergruppen
+health.userGroups.fixed=Interne Benutzergruppen wurden repariert.
+health.users.title=Benutzer prüfen
+health.users.total=Zahl der Benutzerkonten
+health.usersGroup="Benutzer"-Gruppe
+health.usersGroup.incomplete=Die "Benutzer"-Gruppe ist unvollständig. (Alle Benutzer sollten in dieser Gruppe sein)
+health.usersGroup.intro=Alle Benutzer sollten in der "Benutzer"-Gruppe sein, \
+ damit wir ACL-Berechtigungen zu angemeldeten Benutzer zuordnen können. 
+health.usersGroup.missing=Die "Benutzer"-Gruppe fehlt.
+health.usersGroup.status="Benutzer"-Gruppe ist vollständig.
+html.hide.area=verstecken
+icon.copy.link=Objekt kopieren
+icon.info.link=Informationen über dieses Objekt
+index.backup=Backup
+index.backup.data=Backup / Daten exportieren
+index.folder.link=Repository ansehen
+index.manage.acl=ACLs
+index.manage.aclEntry=Berechtigungen
+index.manage.changeTrigger=ChangeTrigger
+index.manage.changeTriggerType=ChangeTrigger-Typen
+index.manage.configEntry=Konfigurationseinträge
+index.manage.folderTypes=Ordner-Typen
+index.manage.format=Formate
+index.manage.group=Gruppen
+index.manage.health=System-Check
+index.manage.indexGroup=Indexgruppen
+index.manage.indexItem=Index-Objekte
+index.manage.indexType=Index-Typen
+index.manage.language=Sprachen (für Objekte)
+index.manage.uiLanguage=Sprachen (GUI)
+index.manage.lifeCycle=Lebenszyklen
+index.manage.lifecycleLog=Lebenszyklus-Log
+index.manage.lifeCycleState=Lebenszyklus-Status
+index.manage.message=Message-Ids und Übersetzung
+index.manage.metasetType=Metaset-Typen
+index.manage.objectType=Objekt-Typen
+index.manage.relationResolver=Verknüpfungs-Auflöser
+index.manage.relationType=Verknüpfungs-Typen
+index.manage.transformer=Umwandler
+index.manage.user=Benuzterkonten
+index.restore.data=Daten wiederherstellen
+indexGroup.create.h1=Indexgruppe anlegen
+indexGroup.create.link=Indexgruppe anlegen
+indexGroup.items.label=Indexeinträge
+indexGroup.label=Indexgruppe
+indexGroup.list.h1=Liste der Indexgruppen
+indexGroup.list.link=Liste der Indexgruppen
+indexGroup.list.title=Liste der Indexgruppen
+indexGroup.name.label=Name
+indexGroup.new.label=Neue Indexgruppe
+indexItem.create.link=Indexeintrag anlegen
+indexItem.edit.title=Indexeintrag bearbeiten
+indexItem.fieldname.label=Feldname
+indexItem.forContent.description=Durchsuche den Dateiinhalt eines Objektes für diesen Indexeintrag.
+indexItem.forContent.label=Für Dateiinhalte
+indexItem.forMetadata.description=Durchsuche die erweiterten (oft kundenspezifischen) Metadaten für diesen Indexeintrag.
+indexItem.forMetadata.label=Für erweiterte Metadaten
+indexItem.forSysMeta.description=Durchsuche die System-Metadaten für diesen Indexeintrag.
+indexItem.forSysMeta.label=Für System-Metadaten
+indexItem.indexGroup.label=Indexgruppe
+indexItem.indexType.label=Indextyp
+indexItem.label=Indexeintrag
+indexItem.list.h1=Liste der Indexeinträge
+indexItem.list.label=Liste der Indexeinträge
+indexItem.list.link=Liste der Indexeinträge
+indexItem.list.title=Liste der Indexeinträge
+indexItem.multipleResults.description=Wenn ausgewählt, werden alle Vorkommen in allen erlaubten Feldern (Inhalt, Metadaten, Systemmetadaten) erfasst.
+indexItem.multipleResults.label=Mehr als ein Treffer möglich
+indexItem.name.label=Name
+indexItem.searchCondition.label=Bedingung für Indizierung 
+indexItem.searchString.label=Suchausdruck
+indexItem.show.h1=Indexeintrag anzeigen
+indexItem.systemic.description=Das "systemisch"-Feld markiert Indexeinträge, die für systemrelevante Werte erfassen (wie z.B. den Namen oder Objekt-Typ).
+indexItem.systemic.label=system-relevant
+indexItem.vaProviderParams.label=Parameter für Vorschlagsliste
+indexType.create.label=Indexeintrag anlegen
+indexType.dataType.label=Datentyp
+indexType.delete.confirm=Wollen Sie diesen Indextyp wirklich löschen?
+indexType.edit.label=Indextyp bearbeiten
+indexType.indexerClass.label=Indexer-Klasse
+indexType.label=Indextyp
+indexType.list.label=Liste der Indextypen
+indexType.name.label=Name
+indexType.new.label=Neuer Indextyp
+indexType.show.label=Indextyp anzeigen
+indexType.vaProviderClass.label=Klasse für Vorschlagshilfe
+input.disabled=Dieses Feld ist nicht gesetzt oder ist deaktiviert.
+input.enabled=Dieses Feld ist markiert oder aktiviert.
+iterate.fail=Fehler beim Bearbeiten der ausgewählten Objekte. Fehlermeldung\: {0}
+label.name=Name
+lang.de=de (Deutsch)
+lang.en=en (Englisch)
+lang.fr=fr (Französisch)
+lang.mul=mul (mehrere Sprachen)
+lang.und=und (unbestimmte Sprache)
+lang.zxx=zxx (sprachfrei)
+language.create=Sprache hinzufügen
+language.create.title=Sprache hinzufügen
+language.delete.success=Die Sprache ''{0}'' wurde gelöscht.
+language.edit.title=Sprache bearbeiten
+language.isoCode=ISO- oder Sprachcode
+language.list=Sprachenliste
+language.list.title=Sprachenliste
+language.metadata=Metadaten
+language.show.title=Details zur Sprache
+language.update.fail=Das Sprachenobjekt konnte leider nicht aktualisiert werden\:<br> {0}
+language.update.success=Die Sprache {0} wurde aktualisiert.
+lcs.config=XML Konfiguration
+lcs.confirm.delete=Wollen Sie diesen Lebenszyklus-Status wirklich löschen?
+lcs.copyStates.empty=Es stehen zur Zeit keine Lebenszyklusstatus zur Auswahl. Bitte speichern Sie diesen Lebenszyklusstatus erst.
+lcs.delete=löschen
+lcs.edit=bearbeiten
+lcs.lifeCycle=Lebenszyklus
+lcs.lifeCycle.list.empty=Es sind zur Zeit keine Lebenszyklus-Objekte verfügbar.
+lcs.lifeCycleStateForCopy=Lebenszyklusstatus für Kopien
+lcs.list=Liste der Lebenszyklusstatus
+lcs.name=Name
+lcs.parameter=Parameter
+lcs.stateClass=Status-Klasse
+license.homepage=Lizenz\: LGPL 2.1 (oder neuer)
+license.overview.link=Mitwirkende und Lizenzen für Komponenten
+lifeCycle.confirm.delete=Wollen Sie diesen Lebenszyklus wirklich löschen?
+lifeCycle.create=Lebenszyklus anlegen
