* German translation of message ids.  * Improved text of some message ids.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -213,7 +213,7 @@ login.button=Login
 login.link=Home
 login.failed=Invalid user name or password
 login.repository=Repository
-login.not.superuser=To use the AdminTool, you need Superuser privileges.
+login.not.superuser=To use the administration GUI, you need Superuser privileges.
 
 index.manage.acl=ACLs
 index.manage.format=Formats
@@ -383,7 +383,7 @@ language.show.title=Language object details
 language.edit.title=Edit language
 
 enable.javascript=Please enable JavaScript in your browser.
-message.update.fail=Failed to update message: <br/> {0}
+message.update.fail=Failed to update message. Errr\: {0}
 message.update.success=Successfully updated message "{0}"
 message.delete.success=Successfully deleted message "{0}"
 message.list.title=List of message ids
@@ -583,7 +583,8 @@ user.replaceUser.intro=If your repository does not require complete ownership re
   for insurance reasons to keep track of who changed which document), you may use the "transfer assets" function \
   to move everything from one user to another. This will transfer objects, folders and permissions to the receiving user. \
   <br> Be careful - this can undermine your security model if a user gains more ACL permissions than intended. You should check \
-  the receiving user''s account afterwards. The user's account whose items have been transferred may be deleted afterwards.
+  the receiving user''s account afterwards. The user's account whose items have been transferred may be deleted afterwards.\
+  <br> Note\: this is a dangerous operation which changes the version history in regard to the participating user accounts\! 
 user.replaceUser.title=Replace User
 user.replaceUser.source=Take items from user:
 user.replaceUser.target=Give items to user:
@@ -707,7 +708,7 @@ lcs.delete=delete
 lcs.lifeCycle.list.empty=There are no LifeCycle objects available at the moment.
 lcs.copyStates.empty=There are currently no LCS available for selection. Please save this LCS first.
 lcs.confirm.delete=Do you really want to delete this LifeCycleState?
-lifeCycleState.none.defined=The database does not contain any LifeCycleState objects.
+lifeCycleState.none.defined=The database does not contain any LifecycleState objects.
 error.invalid.integer=Please use only whole numbers in the respective fields.
 aclEntry.toggleAll.allow=Allow all
 aclEntry.toggleAll.deny=Deny all
@@ -721,8 +722,8 @@ acl.remove.group=remove AclEntry
 acl.manage.aclEntries=Manage AclEntries with group
 acl.visit.aclEntry=go to AclEntry
 
-user.sudoable=Can be sudo target
-user.sudoer=May use sudo
+user.sudoable=Can be sudo target (other accounts / processes may impersonate this account)
+user.sudoer=May use sudo (to impersonate another account)
 lifeCycle.none.defined=Did not find any lifecycles in the database.
 lcs.list=List of LifeCycleStates
 
@@ -895,8 +896,9 @@ osd.move.into=Move into {0}
 osd.copy.into=Copy into {0}
 osd.move.into.unknown=move to ?
 osd.copy.into.unknown=copy to ?
-osd.preview=Preview of ${0}
+osd.preview=Preview of \#{0}
 osd.preview.th=Preview
 cinnamon.cms=Cinnamon ECMS
 error.permission.not_found=The permission {0} was not found.
 lcs.parameter=parameters
+osd.no.format.renderer=There is no renderer for this content type.
