--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -149,7 +149,7 @@ user.edit.title=\u00c9diter l'utilisateur
 user.show.title=Afficher l'utilisateur
 user.show_groups=Afficher les groupes
 user.update.success=L'utilisateur a \u00e9t\u00e9 mis \u00e0 jour.
-user.update.fail=\u00c9chec de la mise \u00e0 jour du compte utilisateur. Reportez-vous au fichier journal pour plus d'informations.\n{0}
+user.update.fail=u00c9chec de la mise u00e0 jour du compte utilisateur. Reportez-vous au fichier journal pour plus d'informations.\n{0}
 user.update.fail.deactivate=Le compte administrateur ne doit pas \u00eatre d\u00e9sactiv\u00e9.
 user.update.fail.rename=Le compte administrateur ne doit pas \u00eatre renomm\u00e9.
 users.system_group.warning=\u00c0 l'exception du _superuser-group, ne jamais ajouter ou enlever des utilisateurs \u00e0 partir des groupes du syst\u00e8me interne (commen\u00e7ant par "_").
@@ -669,3 +669,4 @@ message.export.xml=Exporter en tant que format XML brut
 message.export.xliff=Exporter en tant que format XLIFF
 link.edit.folderType.title=Changer le type de dossier
 create.name=Nom
+metasetType.name.label=Nom
