--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -902,3 +902,5 @@ cinnamon.cms=Cinnamon ECMS
 error.permission.not_found=The permission {0} was not found.
 lcs.parameter=parameters
 osd.no.format.renderer=There is no renderer for this content type.
+
+error.image.negative.boundary=Cannot work with negative indexes on image (x,y,width,height etc must be 0 or greater).
