Add jquery-ui to for relation-type info dialog. Fixes #6

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -905,3 +905,5 @@ osd.no.format.renderer=There is no renderer for this content type.
 
 error.image.negative.boundary=Cannot work with negative indexes on image (x,y,width,height etc must be 0 or greater).
 error.not.an.image=The requested object is not a recognized image format.
+dialog.close=close
+relationType.info.head=Relation Type Details
