--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -824,3 +824,5 @@ versionType.all=Alle Versionen
 versionType.branches=Neueste Versionen in Zweigen
 versionType.head=Neueste Version im Stamm
 versionType.selected=Nur ausgewählte Objekte
+dialog.close=schließen
+relationType.info.head=Details: Verknüpfungstyp
