Added Relation create/delete features.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -907,3 +907,15 @@ error.image.negative.boundary=Cannot work with negative indexes on image (x,y,wi
 error.not.an.image=The requested object is not a recognized image format.
 dialog.close=close
 relationType.info.head=Relation Type Details
+relation.link.create=Create relation
+relation.create=Create relation
+relationType.label=Relation Type
+relation.to=to
+relation.from=from
+editor.current.folder=Current folder: {0}
+editor.folder.up=go up one folder level
+load.preview.fail=Failed to load folder content.
+relation.save=save relation
+error.foreign.relations=One part of the relation must be the currently selected object.
+relation.delete=delete
+icon.no=Icon: red X
