Make folderType.config editable in admin view. Fixes #10

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -919,3 +919,4 @@ relation.save=save relation
 error.foreign.relations=One part of the relation must be the currently selected object.
 relation.delete=delete
 icon.no=Icon: red X
+folderType.config=Configuration
