Remove obsolete description field from ObjectType.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -307,7 +307,7 @@ acl.update.fail=Failed to update ACL because of ''{0}''
 
 objectType.create=New Object Type
 objectType.create.title=Create Object Type
-objectType.description=Description
+objectType.config=Configuration
 objectType.name=Name
 objectType.edit.title=Edit Object Type
 objectType.list=List Object Types
@@ -920,3 +920,10 @@ error.foreign.relations=One part of the relation must be the currently selected 
 relation.delete=delete
 icon.no=Icon: red X
 folderType.config=Configuration
+
+error.unknown.fail=An undefined error occurred: {0}
+pub.public=Cinnamon Public
+pub.cinnamon=Cinnamon Public Pages
+error.invalid.path=The selected folder-path is invalid.
+pub.page.fail=Failed to load page object from database.
+pub.content.fail=Failed to load content of page object.
