Add format message-ids.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -927,3 +927,52 @@ pub.cinnamon=Cinnamon Public Pages
 error.invalid.path=The selected folder-path is invalid.
 pub.page.fail=Failed to load page object from database.
 pub.content.fail=Failed to load content of page object.
+
+format.xml=XML Document
+format.pdf=PDF Document
+format.jpeg=JPEG Image
+format.png=PNG Image
+format.gif=GIF Image
+format.eps=Encapsulated Postscript
+format.tiff=TIFF Image
+format.txt=Text
+format.odt=OpenDocument Text
+format.doc=MS-Word Document
+format.fm=FrameMaker
+format.clp=Clipboard clip
+format.html=HTML
+format.xhtml=XHTML
+format.dtd=Document Type Definition
+format.css=Cascading Style Sheet
+format.zip=ZIP Archive
+format.xsd=XML Schema
+format.csv=Comma Separated Values
+format.cdr=CorelDraw
+format.dita=DITA Topic
+format.ditamap=DITA Map
+format.ods=OpenDocument Spreadsheet
+format.odp=OpenDocument Presentation
+format.odg=OpenDocument Drawing
+format.odc=OpenDocument Chart
+format.odf=OpenDocument Formula
+format.odi=OpenDocument Image
+format.odm=OpenDocument Master Document
+format.odb=OpenDocument Database
+format.ott=OpenDocument Text Template
+format.ots=OpenDocument Spreadsheet Template
+format.otp=OpenDocument Presentation Template
+format.otf=OpenDocument Formula Template
+format.otc=OpenDocument Chart Template
+format.oti=OpenDocument Image Template
+format.otg=OpenDocument Graphic Template
+format.oth=OpenDocument Web Page Template
+format.xls=Microsoft Excel
+format.pps=Microsoft Powerpoint
+format.ppt=Microsoft Powerpoint
+format.xlsx=Microsoft Excel 2007+
+format.pptx=Microsoft Powerpoint 2007
+format.docx=Microsoft Word 2007+
+format.ddn=Data Dispatch Note
+format.dm=Data Module
+format.cgm=Computer Graphics Metafile
+format.js=JavaScript
